--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -1,21 +1,24 @@
 [custom]
 ;解决DNS泄露，无分流群组
-ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
-ruleset=🚀 节点选择,[]DOMAIN-SUFFIX,services.googleapis.cn
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=REJECT,[]GEOSITE,ad
+ruleset=🇺🇸 美国,[]GEOSITE,us
+ruleset=🇯🇵 日本,[]GEOSITE,jp
+ruleset=🇹🇼 台湾,[]GEOSITE,tw
+ruleset=🇸🇬 新加坡,[]GEOSITE,sg
+ruleset=🇭🇰 香港,[]GEOSITE,hk
+ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]♻️ 自动选择`[]🇺🇸 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇰🇷 韩国`[]⚖️ 负载均衡`.*
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=🇺🇸 美国`url-test`(美国|US)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=🇯🇵 日本`url-test`(日本|JP)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=🇸🇬 新加坡`url-test`(狮城|sg)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=🇭🇰 香港`url-test`(香港|HK|港)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=🇹🇼 台湾`url-test`(台湾|TW|台)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=🇰🇷 韩国`url-test`(韩国|KR|韩)`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=⚖️ 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,50,round-robin
 
 enable_rule_generator=true
 overwrite_original_rules=true
