--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -1,11 +1,22 @@
 [custom]
 ;解决DNS泄露，无分流群组
-ruleset=REJECT,[]GEOSITE,ad
-ruleset=🇺🇸 美国,[]GEOSITE,us
-ruleset=🇯🇵 日本,[]GEOSITE,jp
-ruleset=🇹🇼 台湾,[]GEOSITE,tw
-ruleset=🇸🇬 新加坡,[]GEOSITE,sg
-ruleset=🇭🇰 香港,[]GEOSITE,hk
+ruleset=REJECT,[]GEOSITE,category-ads-all
+ruleset=🇺🇸 美国,[]GEOSITE,openai
+ruleset=🇺🇸 美国,[]GEOSITE,anthropic
+ruleset=🇺🇸 美国,[]GEOSITE,perplexity
+ruleset=🇺🇸 美国,[]GEOSITE,youtube
+ruleset=🇺🇸 美国,[]GEOSITE,google
+ruleset=🇺🇸 美国,[]GEOSITE,apple
+ruleset=🇺🇸 美国,[]GEOSITE,icloud
+ruleset=🇯🇵 日本,[]GEOSITE,github
+ruleset=🇯🇵 日本,[]GEOSITE,microsoft
+ruleset=🇹🇼 台湾,[]GEOSITE,twitter
+ruleset=🇹🇼 台湾,[]GEOSITE,facebook
+ruleset=🇹🇼 台湾,[]GEOSITE,netflix
+ruleset=🇸🇬 新加坡,[]GEOSITE,binance
+ruleset=🇸🇬 新加坡,[]GEOSITE,jable
+ruleset=🇸🇬 新加坡,[]GEOSITE,pornhub
+ruleset=🇭🇰 香港,[]GEOSITE,geolocation-!cn
 ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
