--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -10,6 +10,7 @@ ruleset=🇺🇸 美国,[]GEOSITE,apple
 ruleset=🇺🇸 美国,[]GEOSITE,icloud
 ruleset=🇯🇵 日本,[]GEOSITE,github
 ruleset=🇯🇵 日本,[]GEOSITE,microsoft
+ruleset=🇯🇵 日本,[]GEOSITE,telegram
 ruleset=🇹🇼 台湾,[]GEOSITE,twitter
 ruleset=🇹🇼 台湾,[]GEOSITE,facebook
 ruleset=🇹🇼 台湾,[]GEOSITE,netflix
