--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -1,6 +1,7 @@
 [custom]
 ;解决DNS泄露，无分流群组
 ruleset=REJECT,[]GEOSITE,category-ads-all
+ruleset=DIRECT,[]GEOSITE,private
 ruleset=🇺🇸 美国,[]GEOSITE,openai
 ruleset=🇺🇸 美国,[]GEOSITE,anthropic
 ruleset=🇺🇸 美国,[]GEOSITE,perplexity
@@ -11,6 +12,7 @@ ruleset=🇺🇸 美国,[]GEOSITE,icloud
 ruleset=🇯🇵 日本,[]GEOSITE,github
 ruleset=🇯🇵 日本,[]GEOSITE,microsoft
 ruleset=🇯🇵 日本,[]GEOSITE,telegram
+ruleset=🇯🇵 日本,[]GEOSITE,disney
 ruleset=🇹🇼 台湾,[]GEOSITE,twitter
 ruleset=🇹🇼 台湾,[]GEOSITE,facebook
 ruleset=🇹🇼 台湾,[]GEOSITE,netflix
@@ -24,6 +26,10 @@ ruleset=🚀 节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]♻️ 自动选择`[]🇺🇸 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇰🇷 韩国`[]⚖️ 负载均衡`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,50
+custom_proxy_group=🇭🇰 香港实验`select`(香港实验)`[]🇭🇰 香港
+custom_proxy_group=🇸🇬 新加坡实验`select`(新加坡实验)`[]🇸🇬 新加坡
+custom_proxy_group=🇯🇵 日本实验`select`(日本实验)`[]🇯🇵 日本
+custom_proxy_group=🇺🇸 美国实验`select`(美国实验)`[]🇺🇸 美国
 custom_proxy_group=🇺🇸 美国`url-test`(美国|US)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=🇯🇵 日本`url-test`(日本|JP)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=🇸🇬 新加坡`url-test`(狮城|sg|SG|新)`http://www.gstatic.com/generate_204`300,50
