--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -10,7 +10,6 @@ ruleset=🇺🇸 美国,[]GEOSITE,google
 ruleset=🇺🇸 美国,[]GEOSITE,apple
 ruleset=🇺🇸 美国,[]GEOSITE,icloud
 ruleset=🇯🇵 日本,[]GEOSITE,github
-ruleset=🇯🇵 日本,[]GEOSITE,microsoft
 ruleset=🇯🇵 日本,[]GEOSITE,telegram
 ruleset=🇯🇵 日本,[]GEOSITE,disney
 ruleset=🇹🇼 台湾,[]GEOSITE,twitter
@@ -20,6 +19,7 @@ ruleset=🇸🇬 新加坡,[]GEOSITE,binance
 ruleset=🇸🇬 新加坡,[]GEOSITE,jable
 ruleset=🇸🇬 新加坡,[]GEOSITE,pornhub
 ruleset=🇭🇰 香港,[]GEOSITE,geolocation-!cn
+ruleset=DIRECT,[]GEOSITE,microsoft
 ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
