--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -24,7 +24,7 @@ ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]♻️ 自动选择`[]🇺🇸 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇰🇷 韩国`[]⚖️ 负载均衡`.*
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]♻️ 自动选择`[]🇭🇰 香港实验`[]🇸🇬 新加坡实验`[]🇯🇵 日本实验`[]🇺🇸 美国实验`[]🇺🇸 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇰🇷 韩国`[]⚖️ 负载均衡`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=🇭🇰 香港实验`select`(香港实验)`[]🇭🇰 香港
 custom_proxy_group=🇸🇬 新加坡实验`select`(新加坡实验)`[]🇸🇬 新加坡
