--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -2,23 +2,23 @@
 ;解决DNS泄露，无分流群组
 ruleset=REJECT,[]GEOSITE,category-ads-all
 ruleset=DIRECT,[]GEOSITE,private
-ruleset=🇺🇸 美国,[]GEOSITE,openai
-ruleset=🇺🇸 美国,[]GEOSITE,anthropic
-ruleset=🇺🇸 美国,[]GEOSITE,perplexity
-ruleset=🇺🇸 美国,[]GEOSITE,youtube
-ruleset=🇺🇸 美国,[]GEOSITE,google
-ruleset=🇺🇸 美国,[]GEOSITE,apple
-ruleset=🇺🇸 美国,[]GEOSITE,icloud
-ruleset=🇯🇵 日本,[]GEOSITE,github
-ruleset=🇯🇵 日本,[]GEOSITE,telegram
-ruleset=🇯🇵 日本,[]GEOSITE,disney
+ruleset=🇺🇸 美国实验,[]GEOSITE,openai
+ruleset=🇺🇸 美国实验,[]GEOSITE,anthropic
+ruleset=🇺🇸 美国实验,[]GEOSITE,perplexity
+ruleset=🇺🇸 美国实验,[]GEOSITE,youtube
+ruleset=🇺🇸 美国实验,[]GEOSITE,google
+ruleset=🇺🇸 美国实验,[]GEOSITE,apple
+ruleset=🇺🇸 美国实验,[]GEOSITE,icloud
+ruleset=🇯🇵 日本实验,[]GEOSITE,github
+ruleset=🇯🇵 日本实验,[]GEOSITE,telegram
+ruleset=🇯🇵 日本实验,[]GEOSITE,disney
 ruleset=🇹🇼 台湾,[]GEOSITE,twitter
 ruleset=🇹🇼 台湾,[]GEOSITE,facebook
 ruleset=🇹🇼 台湾,[]GEOSITE,netflix
-ruleset=🇸🇬 新加坡,[]GEOSITE,binance
-ruleset=🇸🇬 新加坡,[]GEOSITE,jable
-ruleset=🇸🇬 新加坡,[]GEOSITE,pornhub
-ruleset=🇭🇰 香港,[]GEOSITE,geolocation-!cn
+ruleset=🇸🇬 新加坡实验,[]GEOSITE,binance
+ruleset=🇸🇬 新加坡实验,[]GEOSITE,jable
+ruleset=🇸🇬 新加坡实验,[]GEOSITE,pornhub
+ruleset=🇭🇰 香港实验,[]GEOSITE,geolocation-!cn
 ruleset=DIRECT,[]GEOSITE,microsoft
 ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
