--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -12,6 +12,7 @@ ruleset=🇺🇸 美国实验,[]GEOSITE,icloud
 ruleset=🇯🇵 日本实验,[]GEOSITE,github
 ruleset=🇯🇵 日本实验,[]GEOSITE,telegram
 ruleset=🇯🇵 日本实验,[]GEOSITE,disney
+ruleset=🇯🇵 日本实验,[]GEOSITE,notion
 ruleset=🇹🇼 台湾,[]GEOSITE,twitter
 ruleset=🇹🇼 台湾,[]GEOSITE,facebook
 ruleset=🇹🇼 台湾,[]GEOSITE,netflix
