--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -9,6 +9,7 @@ ruleset=🇺🇸 美国,[]GEOSITE,youtube
 ruleset=🇺🇸 美国,[]GEOSITE,google
 ruleset=🇺🇸 美国,[]GEOSITE,apple
 ruleset=🇺🇸 美国,[]GEOSITE,icloud
+ruleset=🇺🇸 美国,[]GEOSITE,tubi
 ruleset=🇯🇵 日本,[]GEOSITE,github
 ruleset=🇯🇵 日本,[]GEOSITE,telegram
 ruleset=🇯🇵 日本,[]GEOSITE,disney
