--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -2,12 +2,18 @@
 ;解决DNS泄露，无分流群组
 ruleset=REJECT,[]GEOSITE,category-ads-all
 ruleset=DIRECT,[]GEOSITE,private
+ruleset=DIRECT,https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/microsoft%40cn.list
+ruleset=DIRECT,https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/apple-cn.list
+ruleset=DIRECT,https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/google%40cn.list
+ruleset=DIRECT,[]GEOSITE,cn
+ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🇺🇸 美国实验,[]GEOSITE,openai
 ruleset=🇺🇸 美国实验,[]GEOSITE,anthropic
 ruleset=🇺🇸 美国实验,[]GEOSITE,perplexity
 ruleset=🇺🇸 美国实验,[]GEOSITE,youtube
 ruleset=🇺🇸 美国实验,[]GEOSITE,google
 ruleset=🇺🇸 美国实验,[]GEOSITE,apple
+ruleset=🇺🇸 美国实验,https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/tubi.list
 ruleset=🇺🇸 美国实验,[]GEOSITE,icloud
 ruleset=🇯🇵 日本实验,[]GEOSITE,github
 ruleset=🇯🇵 日本实验,[]GEOSITE,telegram
@@ -20,9 +26,6 @@ ruleset=🇸🇬 新加坡实验,[]GEOSITE,binance
 ruleset=🇸🇬 新加坡实验,[]GEOSITE,jable
 ruleset=🇸🇬 新加坡实验,[]GEOSITE,pornhub
 ruleset=🇭🇰 香港实验,[]GEOSITE,geolocation-!cn
-ruleset=DIRECT,[]GEOSITE,microsoft
-ruleset=DIRECT,[]GEOSITE,cn
-ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]♻️ 自动选择`[]🇭🇰 香港实验`[]🇸🇬 新加坡实验`[]🇯🇵 日本实验`[]🇺🇸 美国实验`[]🇺🇸 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇰🇷 韩国`[]⚖️ 负载均衡`.*
