--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -14,6 +14,7 @@ ruleset=🇺🇸 美国实验,[]GEOSITE,youtube
 ruleset=🇺🇸 美国实验,[]GEOSITE,google
 ruleset=🇺🇸 美国实验,[]GEOSITE,apple
 ruleset=🇺🇸 美国实验,[]GEOSITE,microsoft
+ruleset=🇺🇸 美国实验,[]GEOSITE,vmware
 ruleset=🇺🇸 美国实验,https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/tubi.list
 ruleset=🇺🇸 美国实验,[]GEOSITE,icloud
 ruleset=🇯🇵 日本实验,[]GEOSITE,github
