--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -2,10 +2,9 @@
 ;解决DNS泄露，无分流群组
 ruleset=REJECT,[]GEOSITE,category-ads-all
 ruleset=DIRECT,[]GEOSITE,private
-ruleset=DIRECT,https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/microsoft%40cn.list
-ruleset=DIRECT,https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/apple-cn.list
-ruleset=DIRECT,https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/google%40cn.list
 ruleset=DIRECT,[]GEOSITE,cn
+ruleset=DIRECT,[]GEOSITE,apple-cn
+ruleset=DIRECT,[]GEOSITE,google-cn
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🇺🇸 美国实验,[]GEOSITE,openai
 ruleset=🇺🇸 美国实验,[]GEOSITE,anthropic
@@ -13,9 +12,8 @@ ruleset=🇺🇸 美国实验,[]GEOSITE,perplexity
 ruleset=🇺🇸 美国实验,[]GEOSITE,youtube
 ruleset=🇺🇸 美国实验,[]GEOSITE,google
 ruleset=🇺🇸 美国实验,[]GEOSITE,apple
-ruleset=🇺🇸 美国实验,[]GEOSITE,microsoft
 ruleset=🇺🇸 美国实验,[]GEOSITE,vmware
-ruleset=🇺🇸 美国实验,https://gh-proxy.com/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/tubi.list
+ruleset=🇺🇸 美国实验,[]GEOSITE,tubi
 ruleset=🇺🇸 美国实验,[]GEOSITE,icloud
 ruleset=🇯🇵 日本实验,[]GEOSITE,github
 ruleset=🇯🇵 日本实验,[]GEOSITE,telegram
@@ -24,6 +22,7 @@ ruleset=🇯🇵 日本实验,[]GEOSITE,notion
 ruleset=🇹🇼 台湾,[]GEOSITE,twitter
 ruleset=🇹🇼 台湾,[]GEOSITE,facebook
 ruleset=🇹🇼 台湾,[]GEOSITE,netflix
+ruleset=🇹🇼 台湾,[]GEOSITE,microsoft
 ruleset=🇸🇬 新加坡实验,[]GEOSITE,binance
 ruleset=🇸🇬 新加坡实验,[]GEOSITE,jable
 ruleset=🇸🇬 新加坡实验,[]GEOSITE,pornhub
