--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -1,31 +1,30 @@
 [custom]
 ;解决DNS泄露，无分流群组
-ruleset=REJECT,[]GEOSITE,category-ads-all
-ruleset=DIRECT,[]GEOSITE,private
-ruleset=DIRECT,[]GEOSITE,cn
-ruleset=DIRECT,[]GEOSITE,apple-cn
-ruleset=DIRECT,[]GEOSITE,google-cn
-ruleset=DIRECT,[]GEOIP,CN,no-resolve
-ruleset=🇺🇸 美国实验,[]GEOSITE,openai
-ruleset=🇺🇸 美国实验,[]GEOSITE,anthropic
-ruleset=🇺🇸 美国实验,[]GEOSITE,perplexity
-ruleset=🇺🇸 美国实验,[]GEOSITE,youtube
-ruleset=🇺🇸 美国实验,[]GEOSITE,google
-ruleset=🇺🇸 美国实验,[]GEOSITE,apple
-ruleset=🇺🇸 美国实验,[]GEOSITE,vmware
-ruleset=🇺🇸 美国实验,[]GEOSITE,icloud
-ruleset=🇯🇵 日本实验,[]GEOSITE,github
-ruleset=🇯🇵 日本实验,[]GEOSITE,telegram
-ruleset=🇯🇵 日本实验,[]GEOSITE,disney
-ruleset=🇯🇵 日本实验,[]GEOSITE,notion
-ruleset=🇹🇼 台湾,[]GEOSITE,twitter
-ruleset=🇹🇼 台湾,[]GEOSITE,facebook
-ruleset=🇹🇼 台湾,[]GEOSITE,netflix
-ruleset=🇹🇼 台湾,[]GEOSITE,microsoft
-ruleset=🇸🇬 新加坡实验,[]GEOSITE,binance
-ruleset=🇸🇬 新加坡实验,[]GEOSITE,jable
-ruleset=🇸🇬 新加坡实验,[]GEOSITE,pornhub
-ruleset=🇭🇰 香港实验,[]GEOSITE,geolocation-!cn
+ruleset=REJECT,RULE-SET,category_ads_all
+ruleset=DIRECT,RULE-SET,private
+ruleset=DIRECT,RULE-SET,cn
+ruleset=DIRECT,RULE-SET,cn_ip,no-resolve
+ruleset=🇺🇸 美国实验,RULE-SET,openai
+ruleset=🇺🇸 美国实验,RULE-SET,anthropic
+ruleset=🇺🇸 美国实验,RULE-SET,perplexity
+ruleset=🇺🇸 美国实验,RULE-SET,youtube
+ruleset=🇺🇸 美国实验,RULE-SET,google
+ruleset=🇺🇸 美国实验,RULE-SET,apple
+ruleset=🇺🇸 美国实验,RULE-SET,vmware
+ruleset=🇺🇸 美国实验,RULE-SET,tubi
+ruleset=🇺🇸 美国实验,RULE-SET,icloud
+ruleset=🇯🇵 日本实验,RULE-SET,github
+ruleset=🇯🇵 日本实验,RULE-SET,telegram
+ruleset=🇯🇵 日本实验,RULE-SET,disney
+ruleset=🇯🇵 日本实验,RULE-SET,notion
+ruleset=🇹🇼 台湾,RULE-SET,twitter
+ruleset=🇹🇼 台湾,RULE-SET,facebook
+ruleset=🇹🇼 台湾,RULE-SET,netflix
+ruleset=🇹🇼 台湾,RULE-SET,microsoft
+ruleset=🇸🇬 新加坡实验,RULE-SET,binance
+ruleset=🇸🇬 新加坡实验,RULE-SET,jable
+ruleset=🇸🇬 新加坡实验,RULE-SET,pornhub
+ruleset=🇭🇰 香港实验,RULE-SET,geolocation-!cn
 ruleset=🚀 节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]♻️ 自动选择`[]🇭🇰 香港实验`[]🇸🇬 新加坡实验`[]🇯🇵 日本实验`[]🇺🇸 美国实验`[]🇺🇸 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇰🇷 韩国`[]⚖️ 负载均衡`.*
@@ -41,6 +40,39 @@ custom_proxy_group=🇭🇰 香港`url-test`(香港|HK|港)`http://www.gstatic.c
 custom_proxy_group=🇹🇼 台湾`url-test`(台湾|TW|台)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=🇰🇷 韩国`url-test`(韩国|KR|韩)`http://www.gstatic.com/generate_204`300,50
 custom_proxy_group=⚖️ 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,50,round-robin
+
+rule-providers=private,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/private.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=private_ip,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geoip/private.mrs,behavior=ipcidr,format=mrs,proxy=DIRECT
+rule-providers=category_ads_all,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/category-ads-all.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=cn,type=http,url=https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/cn.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=cn_ip,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geoip/cn.mrs,behavior=ipcidr,format=mrs,proxy=DIRECT
+rule-providers=openAI,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/openai.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=anthropic,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/anthropic.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=perplexity,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/perplexity.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=youtube,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/youtube.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=google_ip,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geoip/google.mrs,behavior=ipcidr,format=mrs,proxy=DIRECT
+rule-providers=google,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/google.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=apple_ip,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo-lite/geoip/apple.mrs,behavior=ipcidr,format=mrs,proxy=DIRECT
+rule-providers=apple,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/apple.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=tubi,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/tubi.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=icloud,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/icloud.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=vmware,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/vmware.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=github,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/github.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=telegram_ip,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geoip/telegram.mrs,behavior=ipcidr,format=mrs,proxy=DIRECT
+rule-providers=telegram,type=http,url:=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/telegram.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=disney,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/disney.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=notion,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/notion.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=microsoft,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/microsoft.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=twitter_ip,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geoip/twitter.mrs,behavior=ipcidr,format=mrs,proxy=DIRECT
+rule-providers=twitter,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/twitter.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=facebook_ip,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geoip/facebook.mrs,behavior=ipcidr,format=mrs,proxy=DIRECT
+rule-providers=facebook,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/facebook.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=netflix_ip,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geoip/netflix.mrs,behavior=ipcidr,format=mrs,proxy=DIRECT
+rule-providers=netflix,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/netflix.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=binance,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/binance.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=jable,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/jable.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=pornhub,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/pornhub.mrs,behavior=domain,format=mrs,proxy=DIRECT
+rule-providers=geolocation_Icn,type=http,url=https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/geolocation-!cn.mrs,behavior=domain,format=mrs,proxy=DIRECT
 
 enable_rule_generator=true
 overwrite_original_rules=true
