--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -2,10 +2,6 @@
 ;解决DNS泄露，无分流群组
 ruleset=REJECT,[]GEOSITE,category-ads-all
 ruleset=DIRECT,[]GEOSITE,private
-ruleset=DIRECT,[]GEOSITE,cn
-ruleset=DIRECT,[]GEOSITE,apple-cn
-ruleset=DIRECT,[]GEOSITE,google-cn
-ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🇺🇸 美国实验,[]GEOSITE,openai
 ruleset=🇺🇸 美国实验,[]GEOSITE,anthropic
 ruleset=🇺🇸 美国实验,[]GEOSITE,perplexity
@@ -16,16 +12,18 @@ ruleset=🇺🇸 美国实验,[]GEOSITE,vmware
 ruleset=🇺🇸 美国实验,[]GEOSITE,icloud
 ruleset=🇯🇵 日本实验,[]GEOSITE,github
 ruleset=🇯🇵 日本实验,[]GEOSITE,telegram
-ruleset=🇯🇵 日本实验,[]GEOSITE,disney
 ruleset=🇯🇵 日本实验,[]GEOSITE,notion
 ruleset=🇹🇼 台湾,[]GEOSITE,twitter
 ruleset=🇹🇼 台湾,[]GEOSITE,facebook
 ruleset=🇹🇼 台湾,[]GEOSITE,netflix
 ruleset=🇹🇼 台湾,[]GEOSITE,microsoft
+ruleset=🇹🇼 台湾,[]GEOSITE,disney
 ruleset=🇸🇬 新加坡实验,[]GEOSITE,binance
 ruleset=🇸🇬 新加坡实验,[]GEOSITE,jable
 ruleset=🇸🇬 新加坡实验,[]GEOSITE,pornhub
 ruleset=🇭🇰 香港实验,[]GEOSITE,geolocation-!cn
+ruleset=DIRECT,[]GEOSITE,cn
+ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`[]♻️ 自动选择`[]🇭🇰 香港实验`[]🇸🇬 新加坡实验`[]🇯🇵 日本实验`[]🇺🇸 美国实验`[]🇺🇸 美国`[]🇯🇵 日本`[]🇸🇬 新加坡`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇰🇷 韩国`[]⚖️ 负载均衡`.*
