Change Disney ruleset from US to Taiwan

--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -17,7 +17,7 @@ ruleset=🇹🇼 台湾,[]GEOSITE,twitter
 ruleset=🇹🇼 台湾,[]GEOSITE,facebook
 ruleset=🇹🇼 台湾,[]GEOSITE,netflix
 ruleset=🇹🇼 台湾,[]GEOSITE,microsoft
-ruleset=🇺🇸 美国,[]GEOSITE,disney
+ruleset=🇹🇼 台湾,[]GEOSITE,disney
 ruleset=🇸🇬 新加坡实验,[]GEOSITE,binance
 ruleset=🇸🇬 新加坡实验,[]GEOSITE,jable
 ruleset=🇸🇬 新加坡实验,[]GEOSITE,pornhub
