Add new ruleset for Tubi in nodnsleak.ini

--- a/nodnsleak.ini
+++ b/nodnsleak.ini
@@ -2,6 +2,7 @@
 ;解决DNS泄露，无分流群组
 ruleset=REJECT,[]GEOSITE,category-ads-all
 ruleset=DIRECT,[]GEOSITE,private
+ruleset=🇺🇸 美国实验,[]GEOSITE,tubi
 ruleset=🇺🇸 美国实验,[]GEOSITE,openai
 ruleset=🇺🇸 美国实验,[]GEOSITE,anthropic
 ruleset=🇺🇸 美国实验,[]GEOSITE,perplexity
